--- a/docs/_static/my-styles.css
+++ b/docs/_static/my-styles.css
@@ -13,10 +13,6 @@ h1, h2 {
     color:#0dd;
 }
 
-.highlight {
-    background-color: #888;
-}
-
-.code {
+.highlight pre, code{
     background-color: #888;
 }
