--- a/docs/_static/my-styles.css
+++ b/docs/_static/my-styles.css
@@ -17,6 +17,10 @@ h1, h2 {
     background-color: #888;
 }
 
+a {
+    text-shadow: 0 1px 1px #888;
+}
+
 a:hover {
     text-shadow: 0 0 8px #0dd;
 }
